--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en"
       xmlns:f="http://xsd.helmut-hummel.de/ns/TYPO3/CMS/Fluid/ViewHelpers">
 {namespace ts=DWenzel\T3events\ViewHelpers}
-<f:layout name="Default"/>
+<f:layout name="Backend/Module"/>
 <f:section name="main">
     <f:comment>
         <f:debug title="demand">{demand}</f:debug>
