--- a/Resources/Private/Templates/Course/List.html
+++ b/Resources/Private/Templates/Course/List.html
@@ -1,69 +1,69 @@
-<f:layout name="Default" />
+<f:layout name="Common/Backend/Module"/>
 
 This Template is responsible for creating a list of courses.
 
 <f:section name="main">
-	<f:if condition="{settings.debug.settings}">
-		<f:debug title="settings">{settings}</f:debug>
-	</f:if>
-	<f:if condition="{settings.debug.course.list}">
-		<f:debug title="courses">{courses}</f:debug>
-		<f:debug title="demand">{demand}</f:debug>
-	</f:if>
-	<div class="course-list">
-		<f:flashMessages  />
-		<f:if condition="{settings.course.list.showSortBy}">
-			<f:if condition="{courses}">
-				<span class="hint"><f:translate key="hint.sortBy" /></span>
-				<f:form id="tx-t3events-course-SortBy"
-					name="overwriteDemand"
-					action="list">
-					<fieldset>
-						<f:if condition="{demand.genre}">
-							<f:form.hidden name="overwriteDemand[genre]" value="{demand.genre}" />
-						</f:if>
-						<f:form.radio name="overwriteDemand[sortBy]"
-							value="date"
-							checked="{0: demand.sortBy}=={0: 'performances.date'}" />
-						<label>
-							<f:translate key="label.date" />
-						</label>
-						<f:form.radio name="overwriteDemand[sortBy]"
-							value="headline"
-							checked="{0: demand.sortBy}=={0: 'headline'}" />
-						<label>
-							<f:translate key="label.headline" />
-						</label>
-						<f:form.radio name="overwriteDemand[sortDirection]"
-							value="asc"
-							checked="{0: demand.sortDirection}=={0: 'asc'}" />
-						<label>
-							<f:translate key="label.sortDirection.asc" />
-						</label>
-						<f:form.radio name="overwriteDemand[sortDirection]"
-							value="desc"
-							checked="{0: demand.sortDirection}=={0: 'desc'}" />
-						<label>
-							<f:translate key="label.sortDirection.desc" />
-						</label>
-						<f:form.submit
-							class="submit"
-							name="submit"
-							value="{f:translate(key: 'button.update', default: 'button.update')}"
-							/>
-					</fieldset>
-				</f:form>
-			</f:if>
-		</f:if>
-		<f:widget.paginate
-			objects="{courses}"
-			as="paginatedCourses"
-			configuration="{itemsPerPage: 5, insertAbove: 0, insertBelow: 1}"
-			>
-			<f:for each="{paginatedCourses}" as="course">
-				<f:render partial="Course/ListItem" arguments="{course: course}" />
-			</f:for>
-		</f:widget.paginate>
+    <f:if condition="{settings.debug.settings}">
+        <f:debug title="settings">{settings}</f:debug>
+    </f:if>
+    <f:if condition="{settings.debug.course.list}">
+        <f:debug title="courses">{courses}</f:debug>
+        <f:debug title="demand">{demand}</f:debug>
+    </f:if>
+    <div class="course-list">
+        <f:flashMessages/>
+        <f:if condition="{settings.course.list.showSortBy}">
+            <f:if condition="{courses}">
+                <span class="hint"><f:translate key="hint.sortBy"/></span>
+                <f:form id="tx-t3events-course-SortBy"
+                        name="overwriteDemand"
+                        action="list">
+                    <fieldset>
+                        <f:if condition="{demand.genre}">
+                            <f:form.hidden name="overwriteDemand[genre]" value="{demand.genre}"/>
+                        </f:if>
+                        <f:form.radio name="overwriteDemand[sortBy]"
+                                      value="date"
+                                      checked="{0: demand.sortBy}=={0: 'performances.date'}"/>
+                        <label>
+                            <f:translate key="label.date"/>
+                        </label>
+                        <f:form.radio name="overwriteDemand[sortBy]"
+                                      value="headline"
+                                      checked="{0: demand.sortBy}=={0: 'headline'}"/>
+                        <label>
+                            <f:translate key="label.headline"/>
+                        </label>
+                        <f:form.radio name="overwriteDemand[sortDirection]"
+                                      value="asc"
+                                      checked="{0: demand.sortDirection}=={0: 'asc'}"/>
+                        <label>
+                            <f:translate key="label.sortDirection.asc"/>
+                        </label>
+                        <f:form.radio name="overwriteDemand[sortDirection]"
+                                      value="desc"
+                                      checked="{0: demand.sortDirection}=={0: 'desc'}"/>
+                        <label>
+                            <f:translate key="label.sortDirection.desc"/>
+                        </label>
+                        <f:form.submit
+                                class="submit"
+                                name="submit"
+                                value="{f:translate(key: 'button.update', default: 'button.update')}"
+                        />
+                    </fieldset>
+                </f:form>
+            </f:if>
+        </f:if>
+        <f:widget.paginate
+                objects="{courses}"
+                as="paginatedCourses"
+                configuration="{itemsPerPage: 5, insertAbove: 0, insertBelow: 1}"
+        >
+            <f:for each="{paginatedCourses}" as="course">
+                <f:render partial="Course/ListItem" arguments="{course: course}"/>
+            </f:for>
+        </f:widget.paginate>
 
-	</div>
+    </div>
 </f:section>
