--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -20,11 +20,9 @@
     <f:comment>Paginated list</f:comment>
     <f:if condition="{courses}">
         <f:then>
-            <f:be.widget.paginate
-                    objects="{courses}"
-                    as="paginatedCourses"
-                    configuration="{settings.paginate}"
-            >
+            <f:if condition="{settings.event.list.paginate.insertAbove}">
+                <f:render partial="Backend/Pagination" arguments="{pagination: pagination, paginator: pagination.paginator}" />
+            </f:if>
                 <div class="panel panel-space panel-default recordlist">
                     <table class="table table-striped table-hover typo3-dblist">
                         <thead>
@@ -37,7 +35,7 @@
                             <th>{f:translate(key: 'label.audience', default: 'Audience')}</th>
                         </tr>
                         </thead>
-                        <f:for each="{paginatedCourses}" as="course">
+                        <f:for each="{paginator.paginatedItems}" as="course">
                             <tr class="db_list_normal">
                                 <td nowrap="nowrap">{course.uid}</td>
                                 <td nowrap="nowrap">
@@ -67,7 +65,10 @@
                         </f:for>
                     </table>
                 </div>
-            </f:be.widget.paginate>
+            
+                <f:if condition="{settings.event.list.paginate.insertBelow}">
+                    <f:render partial="Backend/Pagination" arguments="{pagination: pagination, paginator: pagination.paginator}" />
+                </f:if>
         </f:then>
     </f:if>
 </f:section>
