--- a/Resources/Private/Templates/Backend/ScheduleBackend/List.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/List.html
@@ -19,11 +19,9 @@
     <f:comment>Paginated list</f:comment>
     <f:if condition="{performances}">
         <f:then>
-            <f:be.widget.paginate
-                    objects="{performances}"
-                    as="paginatedPerformances"
-                    configuration="{settings.paginate}"
-            >
+            <f:if condition="{settings.event.list.paginate.insertAbove}">
+                <f:render partial="Backend/Pagination" arguments="{pagination: pagination, paginator: pagination.paginator}" />
+            </f:if>
                 <div class="panel panel-space panel-default recordlist">
                     <table class="table table-striped table-hover typo3-dblist ">
                         <thead>
@@ -37,7 +35,7 @@
                             <th class="col-control"></th>
                         </tr>
                         </thead>
-                        <f:for each="{paginatedPerformances}" as="lesson">
+                        <f:for each="{paginator.paginatedItems}" as="lesson">
                             <tr class="db_list_normal">
                                 <td nowrap="nowrap">{lesson.uid}</td>
                                 <td nowrap="nowrap">
@@ -62,7 +60,9 @@
                         </f:for>
                     </table>
                 </div>
-            </f:be.widget.paginate>
+                <f:if condition="{settings.event.list.paginate.insertBelow}">
+                    <f:render partial="Backend/Pagination" arguments="{pagination: pagination, paginator: pagination.paginator}" />
+                </f:if>
         </f:then>
     </f:if>
 </f:section>
